# Self-Constrained-Control

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  security-policy.yml
artifacts/metrics/: metrics.json
artifacts/state/: cycle_1_move_arm.pkl  cycle_1_move_arm.sha256  cycle_2_stop.pkl  cycle_2_stop.sha256
data/: n1_config.yaml
docs/: ALGORITHMIC_FOUNDATIONS.md  API.md  ARCHITECTURE.md  ARCHITECTURE_GAP_ANALYSIS.md  ARGUMENTATION.md  DEPLOYMENT.md  DOCUMENTATION_PROMPT_RESPONSE.md  FORMALIZATION.md  GLOSSARY.md  INTERFACE_CONTRACTS.md  REQUIREMENTS.md  RISK_REGISTER.md  SAFETY_CASE.md  TRACEABILITY.md  VALIDATION_PLAN.md
docs/adr/: ADR-0001-project-scope-and-safety-boundaries.md  ADR-0002-versioning-and-api-stability.md  TEMPLATE.md
scripts/: diff_coverage.py  profile_performance.py  run_system.py  validate_deployment.py
scripts/ci/: check_import_side_effects.py
src/self_constrained_control/: __init__.py  budget_manager.py  cli.py  contracts.py  metrics.py  monitoring.py  neural_interface.py  planner_module.py  system.py  utils.py
src/self_constrained_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/self_constrained_control/rl/: __init__.py  buffer.py  persistence.py  policy.py  reward.py  trainer.py
tests/: benchmark.py  conftest.py  helpers.py  test_biophysics.py  test_budget.py  test_contracts.py  test_diff_coverage.py  test_import_side_effects.py  test_integration.py  test_neural_interface.py  test_numerics.py  test_planner.py  test_rl.py  test_system.py
